--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-  top: 5em;
+  top: 2em;
 }
 
 .error-message {
@@ -22,6 +22,18 @@ th {
     width: 65%;
 }
 
+h1 {
+  margin-top: 0;
+}
+
+nav {
+  z-index: 1;
+}
+
+.modal-body {
+  margin-top: 0;
+  z-index: 2;
+}
 
 .new-character-modal .col label {
   margin: 0 auto;
