reordered stylesheets and navbar is no longer sticky

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,15 +3,16 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/style.css" type="text/css" />
+	
 	<link rel="stylesheet" href="https://unpkg.com/papercss@1.8.1/dist/paper.css" type="text/css" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
 	
 	<title>D&amp;D Campaign Manager &amp; Calculator</title>
 </head>
 
 <body>
 
-	<nav class="border fixed split-nav">
+	<nav class="border split-nav">
 		<div class="nav-brand">
 			<h3><a href="/">D&amp;D Character Manager</a></h3>
 		</div>
