--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="paper container margin-bottom-large margin-top-large">
+<div class="paper container">
   <form id="login-form">
     <h1>Login</h1>
     <p class="error-message"></p>
