--- a/views/calculator.handlebars
+++ b/views/calculator.handlebars
@@ -15,9 +15,9 @@
   <div class="container paper margin-top-large">
     <h1>Character</h1>
 
-    <input type="text" name="num-one" id="num-one">
+    
 
-    <br><br>
+    {{!-- <br><br> --}}
 
 
 
@@ -32,12 +32,12 @@
       <input class="col-md-2" type="number" name="modifier" id="attackModifier" value="0"><b>+</b>
       <input type="number" name="proficiency" class="col-md-2" id="attackProficiency" value="0"><b>-</b>
       <div class="col-md-4">
-        <span id="attackResult">100</span><br>
+        <input type="text" name="num-one" id="num-one"><br><br><br>
         <button id="roll-btn" type="button">Roll</button><br>
-        <input type="checkbox" id="attAdd" />
-        <label for="attAdd"> Advantage</label><br>
-        <input type="checkbox" id="addDis" />
-        <label for="addDis"> disAdvantage</label><br>
+        <input type="checkbox" id="attAdv" /><br>
+        <label id="attAdd"> Advantage</label><br>
+        <input type="checkbox" id="attDis" /><br>
+        <label id="attDsv"> disAdvantage</label><br>
       </div>
     </div>
 
@@ -53,12 +53,12 @@
       <input class="col-md-2" type="number" name="modifier" id="damageModifier" value="0"><b>+</b>
       <input type="number" name="proficiency" class="col-md-2" id="damageProficiency" value="0"><b>-</b>
       <div class="col-md-4">
-        <span id="damageResult">100</span><br>
+        <input type="text" name="num-two" id="num-two"><br><br><br>
         <button id="roll-btn" type="button">Roll</button><br>
-        <input type="checkbox" id="disAdd" />
-        <label for="attAdd"> Advantage</label><br>
-        <input type="checkbox" id="addDis" />
-        <label for="addDis"> disAdvantage</label><br>
+        <input type="checkbox" id="attAdv" /><br>
+        <label id="attAdd"> Advantage</label><br>
+        <input type="checkbox" id="attDis" /><br>
+        <label id="attDsv"> disAdvantage</label><br>
       </div>
     </div>
   </div>
