--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,6 +103,10 @@ h4 {
     margin-block-end: 0em;
 }
 
+.float-right {
+  float: right;
+}
+
 ::-webkit-input-placeholder { /* WebKit browsers */
   opacity: 0.3 !important;
 }
