added class to campaign containers

--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -203,7 +203,7 @@
     {{#each campaigns}}
 
 
-    <div class="collapsible">
+    <div class="collapsible campaign">
       <input id="collapsible-{{this.dataValues.id}}" type="checkbox" name="collapsible">
       <label for="collapsible-{{this.dataValues.id}}">{{this.dataValues.name}}</label>
       <div class="collapsible-body">
