--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,6 +94,10 @@ nav {
     margin-bottom: 0 !important;
 }
 
+/* .content input {
+  display: initial !important;
+} */
+
 h3 {
     margin-bottom: 10px;
 }
@@ -110,6 +114,59 @@ h4 {
 ::-webkit-input-placeholder { /* WebKit browsers */
   opacity: 0.3 !important;
 }
+
+.calc-modal-body {
+  height: 90%;
+  width: 70%;
+  overflow: scroll;
+}
+
+.options {
+  border: solid 1px black;
+}
+
+.option-pane {
+  border-right: solid 1px #BBB;
+}
+
+.calc-input {
+  width:100%;
+}
+
+.flex-horizontal {
+  display: flex;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.square-normal {
+  width: 50px;
+  height: 50px;
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.big {
+  font-size: 28px;
+}
+
+.position-relative {
+  position: relative;
+}
+
+/* .paper-switch-tile {
+  margin: 0 !important;
+  padding: 0 !important;
+} */
 
 /* *{
 
@@ -196,7 +253,7 @@ h4 {
   border-top-right-radius: 15px 225px;
   border: 2px solid #41403e;
   border-color: var(--primary);
-  display: block;
+  display: inline-block;
   font-size: 1rem;
   outline: none;
   padding: .5rem;
