updated paper.css reference

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	
-	<link rel="stylesheet" href="https://unpkg.com/papercss@1.8.1/dist/paper.css" type="text/css" />
+	<link rel="stylesheet" href="css/paper.css" type="text/css" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 	
 	<title>D&amp;D Campaign Manager &amp; Calculator</title>
